--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,10 @@
 //Colors
+$dark-grey: #333333;
+$blue: rgb(0,146,255);
+$purple: rgb(103,1,206);
 
+//Font size
+$font-size-large: 1.8rem;
 
 //Spacing
 $xs-size: 0.8rem;
