--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,12 +3,15 @@ html{
 }
 
 body{
+  color: $dark-grey;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
   background: white;
+  line-height: 1.6;
 }
 
 *{
+  box-sizing: border-box;
   color: black;
 }
 
